background video for hero

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
                 </ul>
             </div>
         </div>
-
-        <hr>
     </header>
+
+    <body>
+        <video id="hero-background" autoplay loop muted>
+            <source src="/uploads/Photography Ad Video Template (Editable).mp4" type="video/mp4">
+          </video>
+    </body>
 </body>
 </html>
