add postimet, kontakt, rrethmeje, gallery

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             </div>
             <div class="header-nav">
                 <ul>
-                    <li><a href="">Liridon Qorraj Studio</a></li>
-                    <li><a href="">Postimet</a></li>
-                    <li><a href="">Kontakti</a></li>
-                    <li><a href="">Rreth Meje</a></li>
-                    <li><a href="">Gallery</a></li>
+                    <li><a href="index.html">Liridon Qorraj Studio</a></li>
+                    <li><a href="postimet.html">Postimet</a></li>
+                    <li><a href="kontakti.html">Kontakti</a></li>
+                    <li><a href="rrethmeje.html">Rreth Meje</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                 </ul>
             </div>
         </div>
