--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <div class="header">
         <div class="header-container">
             <div class="header-logo">
                 <img src="" alt="" id="logo">
@@ -25,8 +25,8 @@
                 </ul>
             </div>
         </div>
-    </header>
-    <body>
+    </div>
+    <div class="body">
 
         <video id="hero-background" autoplay loop muted>
             <source src="/uploads/Photography Ad Video Template (Editable).mp4" type="video/mp4">
@@ -49,6 +49,6 @@
                 <p>KREATIVITET MAKSIMAL</p>
             </div>
         </div>
-    </body>
+    </div>
 </body>
 </html>
