index, contact little details

--- a/index.html
+++ b/index.html
@@ -27,17 +27,16 @@
         </div>
     </div>
     <div class="body">
-
-        <video id="hero-background" autoplay loop muted>
-            <source src="/uploads/Photography Ad Video Template (Editable).mp4" type="video/mp4">
-        </video>
-
-    
-        <div class="galeria">
-              <img src="" alt="Foto 1">
-              <img src="" alt="Foto 2">
-              <img src="" alt="Foto 3">
-              <img src="" alt="Foto 4">
+        <div class="title">
+            <h1>LIRIDONQORRAJ PHOTOGRAPHY</h1>
+        </div>
+        <div class="hero-slideshow">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
         </div>
         <div class="galeria-text">
             <div class="below-hr-galeria">
