--- a/kontakti.html
+++ b/kontakti.html
@@ -32,7 +32,7 @@
         <div class="contact">
             <div class="info-side">
                 <div class="contact-title">
-                    <h1>Kontakti</h1> 
+                    <h1>KONTAKTI</h1> 
                 </div>
                 <div class="contact-info">
                     <ul>
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="contact-photo">
-                <img src="uploads/Foto/IMGL3206.jpg" alt="Foto 1">
+                <img src="uploads/LiridonQorraj.jpg" alt="Foto 1">
             </div>
         </div>
     </div>
