Rreth meje edited and added css

--- a/rrethmeje.html
+++ b/rrethmeje.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="rrethmeje.css">
     <title>Rreth Meje</title>
 </head>
 <body>
@@ -26,6 +27,65 @@
         </div>
     </header>
  
+	<section class="aboutSection" id="sectionAbout">
+		<div class="aboutContents">
+			
+
+			<div class="aboutImage">
+				<img src="uploads/LiridonQorraj.jpg">
+			</div>
+
+
+			<div class="aboutInfo">
+				<h1>About Me</h1>
+				<h2>Professional Web Designer & Developer have 8 years of experience</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<div class="aboutPersonalInfo">
+					<div><span>Name:</span><span>Etimad Khan</span></div>
+					<div><span>Age:</span><span>24 Years</span></div>
+					<div><span>Email:</span><span>xyz@gmail.com</span></div>
+					<div><span>Address:</span><span>A Road, B Street</span></div>
+				</div>
+				
+			</div>
+
+
+<div class="aboutSkills">
+	
+<div class="skill">
+	<div class="subject">Hard Work</div>
+	<div class="progress_bar">
+		<div class="progress_line" value="93%" style="max-width: 93%"></div>
+	</div>
+</div>
+
+<div class="skill">
+	<div class="subject">Web Designing</div>
+	<div class="progress_bar">
+		<div class="progress_line" value="76%" style="max-width: 76%"></div>
+	</div>
+</div>
+
+<div class="skill">
+	<div class="subject">Creativity</div>
+	<div class="progress_bar">
+		<div class="progress_line" value="74%" style="max-width: 74%"></div>
+	</div>
+</div>
+
+<div class="skill">
+	<div class="subject">Web Development</div>
+	<div class="progress_bar">
+		<div class="progress_line" value="86%" style="max-width: 86%"></div>
+	</div>
+</div>
+
+</div>
+
+
+		</div>
+	</section>
 
 </body>
 </html>
