--- a/rrethmeje.html
+++ b/rrethmeje.html
@@ -37,15 +37,15 @@
 
 
 			<div class="aboutInfo">
-				<h1>About Me</h1>
-				<h2>Professional Web Designer & Developer have 8 years of experience</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<h1>Rreth Meje</h1>
+				<h2>Fotograf profesional</h2>
+            <p>Une jam Liridon Qorraj, fotograf profesional me mbi 6 vite në industrinë e fotove, editimeve, videoinçizimeve.
+                Përshkrimi i momenteve tuaja me anë të fotove është misioni im krysor andaj me lejo të kthej çdo moment në një foto/video të paharrueshme.</p>
 				<div class="aboutPersonalInfo">
-					<div><span>Name:</span><span>Etimad Khan</span></div>
-					<div><span>Age:</span><span>24 Years</span></div>
-					<div><span>Email:</span><span>xyz@gmail.com</span></div>
-					<div><span>Address:</span><span>A Road, B Street</span></div>
+					<div><span>Emri:</span><span>Liridon Qorraj</span></div>
+					<div><span>Mosha:</span><span>24 Vjet</span></div>
+					<div><span>Email:</span><span>liridonqorraj@gmail.com</span></div>
+					<div><span>Adresa:</span><span>Prishtina, 10000, Shefqet Shkupi, Prishtina Stars </span></div>
 				</div>
 				
 			</div>
@@ -63,21 +63,21 @@
 <div class="skill">
 	<div class="subject">Web Designing</div>
 	<div class="progress_bar">
-		<div class="progress_line" value="76%" style="max-width: 76%"></div>
+		<div class="progress_line" value="86%" style="max-width: 86%"></div>
 	</div>
 </div>
 
 <div class="skill">
 	<div class="subject">Creativity</div>
 	<div class="progress_bar">
-		<div class="progress_line" value="74%" style="max-width: 74%"></div>
+		<div class="progress_line" value="94%" style="max-width: 94%"></div>
 	</div>
 </div>
 
 <div class="skill">
 	<div class="subject">Web Development</div>
 	<div class="progress_bar">
-		<div class="progress_line" value="86%" style="max-width: 86%"></div>
+		<div class="progress_line" value="76%" style="max-width: 76%"></div>
 	</div>
 </div>
 
