gallery edited and added css

--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="gallery.css">
     <title>Gallery</title>
 </head>
 <body>
@@ -27,5 +28,76 @@
     </header>
  
 
+	<section class="portfolioSection" id="sectionPortfolio">
+		
+		<header class="portfolioTitle">
+			<h1>Puna Ime</h1>
+		</header>
+
+		<main class="portfolioContents">
+
+			<div class="portfolioBtns">
+				<ul>
+					<li class="btn active" data-filter="all">Puna Ime</li>
+					<li class="btn" data-filter="design">Photoshoot</li>
+					<li class="btn" data-filter="development">Qifte</li>
+					<li class="btn" data-filter="logo">Logo</li>
+				</ul>
+			</div>
+			<div class="portfolioGallery">
+				
+				<div class="card" data-item="design">
+					<div class="imgBox">
+						<img src="uploads/Marketi/Bag.jpeg">
+					</div>
+				</div>
+
+				<div class="card" data-item="design">
+					<div class="imgBox">
+						<img src="uploads/Bleona/IMGL8952.jpg">
+					</div>
+				</div>
+
+				<div class="card" data-item="development">
+					<div class="imgBox">
+						<img src="uploads/Butrin Imeri 2/4R7A7608.jpg">
+					</div>
+				</div>
+
+				<div class="card" data-item="development">
+					<div class="imgBox">
+						<img src="uploads/Bleona/IMGL8978.jpg">
+					</div>
+				</div>
+
+				<div class="card" data-item="development">
+					<div class="imgBox">
+						<img src="uploads/Diellza/IMGL5515.jpg">
+					</div>
+				</div>
+
+				<div class="card" data-item="logo">
+					<div class="imgBox">
+						<img src="uploads/Erika/IMGL2528.jpg">
+					</div>
+				</div>
+
+
+			</div>
+
+			<!--  =======   Gallery Ends   =======  -->
+
+		</main>
+
+		<!--  =======   Popup Image Box Starts   =======  -->
+
+		<div class="portfolioPopupBox">
+			<span>&times;</span>
+			<img src="Images/design1.jpg">
+		</div>
+
+		<!--  =======   Popup Image Box Ends   =======  -->
+
+	</section>
 </body>
 </html>
