--- a/photoshoot.html
+++ b/photoshoot.html
@@ -38,32 +38,22 @@
 
 			<div class="portfolioBtns">
 				<ul>
-					<li class="btn active" data-filter="all"><a href="gallery.html">Puna Ime</a></li>
-					<li class="btn" data-filter="design"><a href="photoshoot.html">Photoshoot</a></li>
+					<li class="btn" data-filter="all"><a href="gallery.html">Puna Ime</a></li>
+					<li class="btn active" data-filter="design"><a href="photoshoot.html">Photoshoot</a></li>
 					<li class="btn" data-filter="development"> <a href="qifte.html"></a> Qifte</li>
 					<li class="btn" data-filter="logo"> <a href="logo.html"></a> Logo</li>
 				</ul>
 			</div>
 			<div class="portfolioGallery">
 				
-				<div class="card" data-item="design">
-					<div class="imgBox">
-						<img src="uploads/Marketi/Bag.jpeg">
-					</div>
-				</div>
-
+				
 				<div class="card" data-item="design">
 					<div class="imgBox">
 						<img src="uploads/Bleona/IMGL8952.jpg">
 					</div>
 				</div>
 
-				<div class="card" data-item="development">
-					<div class="imgBox">
-						<img src="uploads/Butrin Imeri 2/4R7A7608.jpg">
-					</div>
-				</div>
-
+			
 				<div class="card" data-item="development">
 					<div class="imgBox">
 						<img src="uploads/Bleona/IMGL8978.jpg">
@@ -76,12 +66,7 @@
 					</div>
 				</div>
 
-				<div class="card" data-item="logo">
-					<div class="imgBox">
-						<img src="uploads/Erika/IMGL2528.jpg">
-					</div>
-				</div>
-
+			
 
 			</div>
 
