added qiftet, little change in gallery, photoshoot

--- a/photoshoot.html
+++ b/photoshoot.html
@@ -40,8 +40,8 @@
 				<ul>
 					<li class="btn" data-filter="all"><a href="gallery.html">Puna Ime</a></li>
 					<li class="btn active" data-filter="design"><a href="photoshoot.html">Photoshoot</a></li>
-					<li class="btn" data-filter="development"> <a href="qifte.html"></a> Qifte</li>
-					<li class="btn" data-filter="logo"> <a href="logo.html"></a> Logo</li>
+					<li class="btn" data-filter="development"> <a href="qifte.html"> Qifte</a></li>
+					<li class="btn" data-filter="logo"> <a href="logo.html">Logo</a></li>
 				</ul>
 			</div>
 			<div class="portfolioGallery">
