--- a/index.html
+++ b/index.html
@@ -30,14 +30,24 @@
         <div class="title">
             <h1>LIRIDONQORRAJ PHOTOGRAPHY</h1>
         </div>
-        <div class="hero-slideshow">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-        </div>
+        <div class="hero-slideshow-container">
+            <div class="slideshow-wrapper">
+            <img id="image1" src="uploads/Butrint Imeri/IMGL8001.jpg" alt="Image 1">
+            <img id="image2" src="uploads/Bleona/IMGL8979.jpg" alt="Image 2">
+            <img id="image3" src="uploads/Butrin Imeri 2/IMG_7941.jpg" alt="Image 3">
+            <img id="image4" src="uploads/Bikini 1/IMGL3958.jpg" alt="Image 4">
+            <img id="image5" src="uploads/Diellza/IMGL5569.jpg" alt="Image 5">
+            <img id="image6" src="uploads/Bleona/IMGL8979.jpg" alt="Image 6">
+            <img id="image7" src="uploads/Bleona/IMGL8979.jpg" alt="Image 7">
+            <img id="image8" src="uploads/Bleona/IMGL8979.jpg" alt="Image 8">
+            <img id="image9" src="uploads/Bleona/IMGL8979.jpg" alt="Image 9">
+            <img id="image10" src="uploads/Bleona/IMGL8979.jpg" alt="Image 10">
+            </div>
+          </div>
+          <button id="prevBtn">Previous</button>
+          <button id="nextBtn">Next</button>
+          <script src="slideshow.js"></script>
+
         <div class="galeria-text">
             <div class="below-hr-galeria">
                 <p><strong> Studio Profesionale </strong></p>
