--- a/bleona.html
+++ b/bleona.html
@@ -31,7 +31,7 @@
 	<section class="portfolioSection" id="sectionPortfolio">
 		
 		<header class="portfolioTitle">
-			<h1>Puna Ime</h1>
+			<h1>Bleona</h1>
 		</header>
 
 		<main class="portfolioContents">
@@ -46,39 +46,40 @@
 			</div>
 			<div class="portfolioGallery">
 				
-				<div class="card" data-item="design">
-					<div class="imgBox">
-						<img src="uploads/Marketi/Bag.jpeg">
-					</div>
-				</div>
+			
 
 				<div class="card" data-item="design">
 					<div class="imgBox">
-						<a href="bleona.html">	<img  src="uploads/Bleona/IMGL8952.jpg" > </a>
+							<img  src="uploads/Bleona/IMGL8952.jpg" >
 					</div>
 				</div>
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="uploads/Butrin Imeri 2/4R7A7608.jpg">
+						<img src="uploads/Bleona/IMGL9010.jpg">
+					</div>
+				</div>
+                <div class="card" data-item="development">
+					<div class="imgBox">
+						<img src="uploads/Bleona/IMGL8979.jpg">
 					</div>
 				</div>
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="uploads/Bleona/IMGL8978.jpg">
+						<img src="uploads/Bleona/IMGL9014.jpg">
 					</div>
 				</div>
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="uploads/Diellza/IMGL5515.jpg">
+						<img src="uploads/Bleona/IMGL9036.jpg">
 					</div>
 				</div>
 
 				<div class="card" data-item="logo">
 					<div class="imgBox">
-						<img src="uploads/Erika/IMGL2528.jpg">
+						<img src="uploads/Bleona/IMGL9121.jpg">
 					</div>
 				</div>
 
