added diellza, erika, martini

--- a/erika.html
+++ b/erika.html
@@ -31,7 +31,7 @@
 	<section class="portfolioSection" id="sectionPortfolio">
 		
 		<header class="portfolioTitle">
-			<h1>Puna Ime</h1>
+			<h1>Erika</h1>
 		</header>
 
 		<main class="portfolioContents">
@@ -46,39 +46,40 @@
 			</div>
 			<div class="portfolioGallery">
 				
-				<div class="card" data-item="design">
-					<div class="imgBox">
-						<a href="marketi.html"><img src="uploads/Marketi/Bag.jpeg"></a>
-					</div>
-				</div>
+			
 
 				<div class="card" data-item="design">
 					<div class="imgBox">
-						<a href="bleona.html">	<img  src="uploads/Bleona/IMGL8952.jpg" > </a>
+							<img  src="uploads/Erika/IMGL2509.jpg" >
 					</div>
 				</div>
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<a href="buntrint.html">	<img src="uploads/Butrin Imeri 2/4R7A7608.jpg"> </a>
+						<img src="uploads/Erika/IMGL2528.jpg">
+					</div>
+				</div>
+                <div class="card" data-item="development">
+					<div class="imgBox">
+						<img src="uploads/Erika/IMGL2669.jpg">
 					</div>
 				</div>
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<a href="martini.html"> <img src="uploads/Martini/IMGL4496.jpg"> </a>
+						<img src="uploads/Erika/IMGL2834.jpg">
 					</div>
 				</div>
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<a href="diellza.html"> <img src="uploads/Diellza/IMGL5515.jpg"> </a>
+						<img src="uploads/Erika/IMGL2835.jpg">
 					</div>
 				</div>
 
 				<div class="card" data-item="logo">
 					<div class="imgBox">
-						<a href="erika.html"> <img src="uploads/Erika/IMGL2528.jpg"> </a>
+						<img src="uploads/Erika/IMGL2842.jpg">
 					</div>
 				</div>
 
