Buttons for slideshow and slideshow updated

--- a/index.html
+++ b/index.html
@@ -42,10 +42,20 @@
             <img id="image8" src="uploads/Bleona/IMGL8979.jpg" alt="Image 8">
             <img id="image9" src="uploads/Bleona/IMGL8979.jpg" alt="Image 9">
             <img id="image10" src="uploads/Bleona/IMGL8979.jpg" alt="Image 10">
+            </div>    
+        </div>
+        <div class="slideshow-buttons">
+            <div id="prevBtn">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
-          </div>
-          <button id="prevBtn">Previous</button>
-          <button id="nextBtn">Next</button>
+            <div id="nextBtn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
           <script src="slideshow.js"></script>
 
         <div class="galeria-text">
