--- a/index.html
+++ b/index.html
@@ -32,30 +32,41 @@
         </div>
         <div class="hero-slideshow-container">
             <div class="slideshow-wrapper">
-            <img id="image1" src="uploads/Butrint Imeri/IMGL8001.jpg" alt="Image 1">
-            <img id="image2" src="uploads/Bleona/IMGL8979.jpg" alt="Image 2">
-            <img id="image3" src="uploads/Butrin Imeri 2/IMG_7941.jpg" alt="Image 3">
-            <img id="image4" src="uploads/Bikini 1/IMGL3958.jpg" alt="Image 4">
-            <img id="image5" src="uploads/Diellza/IMGL5569.jpg" alt="Image 5">
-            <img id="image6" src="uploads/Bleona/IMGL8979.jpg" alt="Image 6">
-            <img id="image7" src="uploads/Bleona/IMGL8979.jpg" alt="Image 7">
-            <img id="image8" src="uploads/Bleona/IMGL8979.jpg" alt="Image 8">
-            <img id="image9" src="uploads/Bleona/IMGL8979.jpg" alt="Image 9">
-            <img id="image10" src="uploads/Bleona/IMGL8979.jpg" alt="Image 10">
-            </div>    
-        </div>
-        <div class="slideshow-buttons">
-            <div id="prevBtn">
-                <span></span>
-                <span></span>
-                <span></span>
+              <div class="slides-container">
+                <div class="slide">
+                  <img id="image1" src="uploads/Butrint Imeri/IMGL8001.jpg" alt="Image 1">
+                </div>
+                <div class="slide">
+                  <img id="image2" src="uploads/Bleona/IMGL8979.jpg" alt="Image 2">
+                </div>
+                <div class="slide">
+                  <img id="image3" src="uploads/Butrin Imeri 2/IMG_7941.jpg" alt="Image 3">
+                </div>
+                <div class="slide">
+                  <img id="image4" src="uploads/Bikini 1/IMGL3958.jpg" alt="Image 4">
+                </div>
+                <div class="slide">
+                  <img id="image5" src="uploads/Diellza/IMGL5569.jpg" alt="Image 5">
+                </div>
+                <div class="slide">
+                  <img id="image6" src="uploads/Bleona/IMGL8979.jpg" alt="Image 6">
+                </div>
+                <div class="slide">
+                  <img id="image7" src="uploads/Bleona/IMGL8979.jpg" alt="Image 7">
+                </div>
+                <div class="slide">
+                  <img id="image8" src="uploads/Bleona/IMGL8979.jpg" alt="Image 8">
+                </div>
+                <div class="slide">
+                  <img id="image9" src="uploads/Bleona/IMGL8979.jpg" alt="Image 9">
+                </div>
+                <div class="slide">
+                  <img id="image10" src="uploads/Bleona/IMGL8979.jpg" alt="Image 10">
+                </div>
+              </div>
             </div>
-            <div id="nextBtn">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
+          </div>
+          
           <script src="slideshow.js"></script>
 
         <div class="galeria-text">
