gallery filter added and tested, header renewed

--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,6 @@
             <div class="header-nav">
                 <ul>
                     <li><a href="index.html">Liridon Qorraj Studio</a></li>
-                    <li><a href="postimet.html">Postimet</a></li>
                     <li><a href="kontakti.html">Kontakti</a></li>
                     <li><a href="rrethmeje.html">Rreth Meje</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
@@ -26,67 +25,30 @@
             </div>
         </div>
     </header>
- 
 
-	<section class="portfolioSection" id="sectionPortfolio">
-		
-		<header class="portfolioTitle">
-			<h1>Puna Ime</h1>
-		</header>
+	<div class="body">
+		<div class="filter-buttons">
+			<button class="filter-button" data-category="all">All</button>
+			<button class="filter-button" data-category="photoshoot">Photoshoot</button>
+			<button class="filter-button" data-category="advertisement">Advertisement</button>
+			<button class="filter-button" data-category="wedding">Weddings</button>
+		</div>
 
-		<main class="portfolioContents">
+		<div class="gallery">
+			<img src="/uploads/Bleona/IMGL8979.jpg" class="image photoshoot">
+			<img src="/uploads/Martini/IMGL4519.jpg" class="image advertisement">
+			<img src="/uploads/Qifti 1/IMGL0314.jpg" class="image wedding">
+			<img src="/uploads/Butrint Imeri/IMGL8001.jpg" class="image photoshoot">
+			<img src="/uploads/Marketi/CanonCamera2.jpeg" class="image advertisement">
+			<img src="/uploads/Qifti 2/IMGL6848.jpg" class="image wedding">
+			<img src="/uploads/Erika/IMGL2834.jpg" class="image photoshoot">
+			<img src="/uploads/Martini/IMGL4541.jpg" class="image advertisement">
+			<img src="/uploads/Qifti 6/IMGL5142.jpg" class="image wedding">
+		</div>
 
-			<div class="portfolioBtns">
-				<ul>
-					<li class="btn active" data-filter="all"><a href="gallery.html">Puna Ime</a></li>
-					<li class="btn" data-filter="design"><a href="photoshoot.html">Photoshoot</a></li>
-					<li class="btn" data-filter="development"> <a href="qifte.html"> Qifte</a></li>
-					<li class="btn" data-filter="logo"> <a href="logo.html"> Logo</a></li>
-				</ul>
-			</div>
-			<div class="portfolioGallery">
-				
-				<div class="card" data-item="design">
-					<div class="imgBox">
-						<a href="marketi.html"><img src="uploads/Marketi/Bag.jpeg"></a>
-					</div>
-				</div>
-
-				<div class="card" data-item="design">
-					<div class="imgBox">
-						<a href="bleona.html">	<img  src="uploads/Bleona/IMGL8952.jpg" > </a>
-					</div>
-				</div>
-
-				<div class="card" data-item="development">
-					<div class="imgBox">
-						<a href="buntrint.html">	<img src="uploads/Butrin Imeri 2/4R7A7608.jpg"> </a>
-					</div>
-				</div>
-
-				<div class="card" data-item="development">
-					<div class="imgBox">
-						<a href="martini.html"> <img src="uploads/Martini/IMGL4496.jpg"> </a>
-					</div>
-				</div>
-
-				<div class="card" data-item="development">
-					<div class="imgBox">
-						<a href="diellza.html"> <img src="uploads/Diellza/IMGL5515.jpg"> </a>
-					</div>
-				</div>
-
-				<div class="card" data-item="logo">
-					<div class="imgBox">
-						<a href="erika.html"> <img src="uploads/Erika/IMGL2528.jpg"> </a>
-					</div>
-				</div>
+		<script src="galleryfilter.js"></script>
+	</div>
 
 
-			</div>
-
-		</main>
-
-	</section>
 </body>
 </html>
