added pixijs in kontakt

--- a/kontakti.html
+++ b/kontakti.html
@@ -48,5 +48,7 @@
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.10/pixi.min.js"></script>
+  <script src="kontakt-pixi.js"></script>
 </body>
 </html>
