--- a/gallery.html
+++ b/gallery.html
@@ -35,8 +35,8 @@
 		</div>
 
 		<div class="gallery">
-			<img src="/uploads/Bleona/IMGL8979.jpg" class="image photoshoot">
-			<img src="/uploads/Martini/IMGL4519.jpg" class="image advertisement">
+			<img src="/uploads/Bleona/IMGL8979.jpg" class="image photoshoot" onclick="openModal('Bleona')">
+			<img src="/uploads/Martini/IMGL4519.jpg" class="image advertisement" onclick="openModal('Martini')">
 			<img src="/uploads/Qifti 1/IMGL0314.jpg" class="image wedding">
 			<img src="/uploads/Butrint Imeri/IMGL8001.jpg" class="image photoshoot">
 			<img src="/uploads/Marketi/CanonCamera2.jpeg" class="image advertisement">
@@ -46,6 +46,14 @@
 			<img src="/uploads/Qifti 6/IMGL5142.jpg" class="image wedding">
 		</div>
 
+        <div id="myModal" class="modal">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <div class="modal-content">
+              <div id="modalGallery" class="modal-gallery"></div>
+            </div>
+        </div>
+          
+        <script src="galleryModals.js"></script>
 		<script src="galleryfilter.js"></script>
 	</div>
 
